[project]
name = "hsi-utils"
version = "0.1.0"
description = "Shared utility library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lpips>=0.1.4",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "pillow>=12.0.0",
    "rich>=14.2.0",
    "scipy>=1.16.2",
]
