[project]
name = "hsi-utils"
version = "0.1.0"
description = "Shared utility library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mat73>=0.65",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "omegaconf>=2.3.0",
    "openexr>=3.4.12",
    "pillow>=12.0.0",
    "rich>=14.2.0",
    "scipy>=1.16.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
metrics = [
    "lpips>=0.1.4",
]

[tool.ty.environment]
python = ".venv"
